force-app/main/default/objects/VN_contact_manual__c/VN_contact_manual__c.object-meta.xml
<CustomObject>
    <label>VN contact manual</label>
    <nameField>
        <label>VN contact manual Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>VN contact manuals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>