force-app/main/default/objects/VN_contact_manual__c/fields/addr_country__c.field-meta.xml
<CustomField>
    <fullName>addr_country__c</fullName>
    <label>Addr Country</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>