force-app/main/default/objects/VN_contact_manual__c/fields/addr_district__c.field-meta.xml
<CustomField>
    <fullName>addr_district__c</fullName>
    <label>Addr District</label>
    <length>255</length>
    <type>Text</type>
</CustomField>