force-app/main/default/objects/VN_contact_manual__c/fields/addr_postalcode__c.field-meta.xml
<CustomField>
    <fullName>addr_postalcode__c</fullName>
    <label>Addr PostalCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>