force-app/main/default/objects/VN_contact_manual__c/fields/addr_region__c.field-meta.xml
<CustomField>
    <fullName>addr_region__c</fullName>
    <label>Addr Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>