force-app/main/default/objects/VN_contact_manual__c/fields/addr_stateorprovince__c.field-meta.xml
<CustomField>
    <fullName>addr_stateorprovince__c</fullName>
    <label>Addr StateOrProvince</label>
    <length>255</length>
    <type>Text</type>
</CustomField>