force-app/main/default/objects/VN_contact_manual__c/fields/addr_streetline1__c.field-meta.xml
<CustomField>
    <fullName>addr_streetline1__c</fullName>
    <label>Addr StreetLine1</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>