force-app/main/default/objects/VN_contact_manual__c/fields/addr_streetline2__c.field-meta.xml
<CustomField>
    <fullName>addr_streetline2__c</fullName>
    <label>Addr StreetLine2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>