force-app/main/default/objects/VN_contact_manual__c/fields/addr_ward__c.field-meta.xml
<CustomField>
    <fullName>addr_ward__c</fullName>
    <label>Addr Ward</label>
    <length>255</length>
    <type>Text</type>
</CustomField>