force-app/main/default/objects/VN_contact_manual__c/fields/br_brandid__c.field-meta.xml
<CustomField>
    <fullName>br_brandid__c</fullName>
    <label>BR BrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>