force-app/main/default/objects/VN_contact_manual__c/fields/br_brandname__c.field-meta.xml
<CustomField>
    <fullName>br_brandname__c</fullName>
    <label>BR BrandName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>