force-app/main/default/objects/VN_contact_manual__c/fields/br_brandswitchreason__c.field-meta.xml
<CustomField>
    <fullName>br_brandswitchreason__c</fullName>
    <label>BR BrandSwitchReason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>