force-app/main/default/objects/VN_contact_manual__c/fields/br_currbrandid__c.field-meta.xml
<CustomField>
    <fullName>br_currbrandid__c</fullName>
    <label>br_currbrandid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>