force-app/main/default/objects/VN_contact_manual__c/fields/br_currprevbrandid__c.field-meta.xml
<CustomField>
    <fullName>br_currprevbrandid__c</fullName>
    <label>BR CurrPrevBrandID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>