force-app/main/default/objects/VN_contact_manual__c/fields/br_currprevbrandname__c.field-meta.xml
<CustomField>
    <fullName>br_currprevbrandname__c</fullName>
    <label>BR CurrPrevBrandName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>