force-app/main/default/objects/VN_contact_manual__c/fields/br_memberexpirydate__c.field-meta.xml
<CustomField>
    <fullName>br_memberexpirydate__c</fullName>
    <label>BR MemberExpiryDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>