force-app/main/default/objects/VN_contact_manual__c/fields/br_memberid__c.field-meta.xml
<CustomField>
    <fullName>br_memberid__c</fullName>
    <label>BR MemberID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>