force-app/main/default/objects/VN_contact_manual__c/fields/br_memberstartdate__c.field-meta.xml
<CustomField>
    <fullName>br_memberstartdate__c</fullName>
    <label>BR MemberStartDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>