force-app/main/default/objects/VN_contact_manual__c/fields/br_memberstatus__c.field-meta.xml
<CustomField>
    <fullName>br_memberstatus__c</fullName>
    <label>BR MemberStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>