force-app/main/default/objects/VN_contact_manual__c/fields/br_relationstatus__c.field-meta.xml
<CustomField>
    <fullName>br_relationstatus__c</fullName>
    <label>BR RelationStatus</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>