force-app/main/default/objects/VN_contact_manual__c/fields/child_dob__c.field-meta.xml
<CustomField>
    <fullName>child_dob__c</fullName>
    <label>Child DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>