force-app/main/default/objects/VN_contact_manual__c/fields/child_firstname__c.field-meta.xml
<CustomField>
    <fullName>child_firstname__c</fullName>
    <label>Child FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>