force-app/main/default/objects/VN_contact_manual__c/fields/child_fullname__c.field-meta.xml
<CustomField>
    <fullName>child_fullname__c</fullName>
    <label>Child FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>