force-app/main/default/objects/VN_contact_manual__c/fields/child_gender__c.field-meta.xml
<CustomField>
    <fullName>child_gender__c</fullName>
    <label>Child Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>