force-app/main/default/objects/VN_contact_manual__c/fields/child_nationalid__c.field-meta.xml
<CustomField>
    <fullName>child_nationalid__c</fullName>
    <label>Child NationalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>