force-app/main/default/objects/VN_contact_manual__c/fields/contact_dob__c.field-meta.xml
<CustomField>
    <fullName>contact_dob__c</fullName>
    <label>Contact DOB</label>
    <length>255</length>
    <type>Text</type>
</CustomField>