force-app/main/default/objects/VN_contact_manual__c/fields/contact_donotcall__c.field-meta.xml
<CustomField>
    <fullName>contact_donotcall__c</fullName>
    <label>Contact DoNotCall</label>
    <length>10</length>
    <type>Text</type>
</CustomField>