force-app/main/default/objects/VN_contact_manual__c/fields/contact_edd__c.field-meta.xml
<CustomField>
    <fullName>contact_edd__c</fullName>
    <description>Estimated Due Date. yyyy-mm-dd</description>
    <label>Contact EDD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>