force-app/main/default/objects/VN_contact_manual__c/fields/contact_email__c.field-meta.xml
<CustomField>
    <fullName>contact_email__c</fullName>
    <label>Contact Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>