force-app/main/default/objects/VN_contact_manual__c/fields/contact_emailoptout__c.field-meta.xml
<CustomField>
    <fullName>contact_emailoptout__c</fullName>
    <label>Contact EmailOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>