force-app/main/default/objects/VN_contact_manual__c/fields/contact_firstname__c.field-meta.xml
<CustomField>
    <fullName>contact_firstname__c</fullName>
    <description>First name of primary contact</description>
    <label>Contact FirstName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>