force-app/main/default/objects/VN_contact_manual__c/fields/contact_fullname__c.field-meta.xml
<CustomField>
    <fullName>contact_fullname__c</fullName>
    <label>Contact FullName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>