force-app/main/default/objects/VN_contact_manual__c/fields/contact_gender__c.field-meta.xml
<CustomField>
    <fullName>contact_gender__c</fullName>
    <label>Contact Gender</label>
    <length>255</length>
    <type>Text</type>
</CustomField>