force-app/main/default/objects/VN_contact_manual__c/fields/contact_height__c.field-meta.xml
<CustomField>
    <fullName>contact_height__c</fullName>
    <description>in cm</description>
    <label>Contact Height</label>
    <length>255</length>
    <type>Text</type>
</CustomField>