force-app/main/default/objects/VN_contact_manual__c/fields/contact_homephone__c.field-meta.xml
<CustomField>
    <fullName>contact_homephone__c</fullName>
    <label>Contact HomePhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>