force-app/main/default/objects/VN_contact_manual__c/fields/contact_lastname__c.field-meta.xml
<CustomField>
    <fullName>contact_lastname__c</fullName>
    <label>Contact LastName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>