force-app/main/default/objects/VN_contact_manual__c/fields/contact_masteroptout__c.field-meta.xml
<CustomField>
    <fullName>contact_masteroptout__c</fullName>
    <label>Contact MasterOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>