force-app/main/default/objects/VN_contact_manual__c/fields/contact_mobilephone__c.field-meta.xml
<CustomField>
    <fullName>contact_mobilephone__c</fullName>
    <label>Contact MobilePhone</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>