force-app/main/default/objects/VN_contact_manual__c/fields/contact_nationalid__c.field-meta.xml
<CustomField>
    <fullName>contact_nationalid__c</fullName>
    <label>Contact NationalID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>