force-app/main/default/objects/VN_contact_manual__c/fields/contact_otherphone__c.field-meta.xml
<CustomField>
    <fullName>contact_otherphone__c</fullName>
    <label>Contact OtherPhone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>