force-app/main/default/objects/VN_contact_manual__c/fields/contact_preferredlanguage__c.field-meta.xml
<CustomField>
    <fullName>contact_preferredlanguage__c</fullName>
    <label>Contact PreferredLanguage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>