force-app/main/default/objects/VN_contact_manual__c/fields/contact_salutation__c.field-meta.xml
<CustomField>
    <fullName>contact_salutation__c</fullName>
    <label>Contact Salutation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>