force-app/main/default/objects/VN_contact_manual__c/fields/contact_smsoptout__c.field-meta.xml
<CustomField>
    <fullName>contact_smsoptout__c</fullName>
    <label>Contact SMSOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>