force-app/main/default/objects/VN_contact_manual__c/fields/contact_weeksofpregnancy__c.field-meta.xml
<CustomField>
    <fullName>contact_weeksofpregnancy__c</fullName>
    <label>Contact WeeksOfPregnancy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>