force-app/main/default/objects/VN_contact_manual__c/fields/contact_weight__c.field-meta.xml
<CustomField>
    <fullName>contact_weight__c</fullName>
    <description>in kg</description>
    <label>Contact Weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>