force-app/main/default/objects/VN_contact_manual__c/fields/contact_whatsappoptout__c.field-meta.xml
<CustomField>
    <fullName>contact_whatsappoptout__c</fullName>
    <label>Contact WhatsappOptOut</label>
    <length>10</length>
    <type>Text</type>
</CustomField>