force-app/main/default/objects/VN_contact_manual__c/fields/cr_campaignid__c.field-meta.xml
<CustomField>
    <fullName>cr_campaignid__c</fullName>
    <label>CR CampaignID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>