force-app/main/default/objects/VN_contact_manual__c/fields/cr_campaignname__c.field-meta.xml
<CustomField>
    <fullName>cr_campaignname__c</fullName>
    <label>CR CampaignName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>