force-app/main/default/objects/VN_contact_manual__c/fields/cr_channelid__c.field-meta.xml
<CustomField>
    <fullName>cr_channelid__c</fullName>
    <label>CR ChannelID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>