force-app/main/default/objects/VN_contact_manual__c/fields/cr_channelname__c.field-meta.xml
<CustomField>
    <fullName>cr_channelname__c</fullName>
    <label>CR ChannelName</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>