force-app/main/default/objects/VN_contact_manual__c/fields/cr_discharge_date__c.field-meta.xml
<CustomField>
    <fullName>cr_discharge_date__c</fullName>
    <label>CR Discharge Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>