force-app/main/default/objects/VN_contact_manual__c/fields/cr_hcpname__c.field-meta.xml
<CustomField>
    <fullName>cr_hcpname__c</fullName>
    <label>CR HCPName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>