force-app/main/default/objects/VN_contact_manual__c/fields/cr_hcpspecialty__c.field-meta.xml
<CustomField>
    <fullName>cr_hcpspecialty__c</fullName>
    <label>CR HCPSpecialty</label>
    <length>255</length>
    <type>Text</type>
</CustomField>