force-app/main/default/objects/VN_contact_manual__c/fields/cr_promotercode__c.field-meta.xml
<CustomField>
    <fullName>cr_promotercode__c</fullName>
    <label>CR PromoterCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>