force-app/main/default/objects/VN_contact_manual__c/fields/cr_sampleproductid__c.field-meta.xml
<CustomField>
    <fullName>cr_sampleproductid__c</fullName>
    <label>CR SampleProductID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>