force-app/main/default/objects/VN_contact_manual__c/fields/cr_sampleproductname__c.field-meta.xml
<CustomField>
    <fullName>cr_sampleproductname__c</fullName>
    <label>CR SampleProductName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>