force-app/main/default/objects/VN_contact_manual__c/fields/cr_samplerequested__c.field-meta.xml
<CustomField>
    <fullName>cr_samplerequested__c</fullName>
    <label>CR SampleRequested</label>
    <length>255</length>
    <type>Text</type>
</CustomField>