force-app/main/default/objects/VN_contact_manual__c/fields/cr_supervisorcode__c.field-meta.xml
<CustomField>
    <fullName>cr_supervisorcode__c</fullName>
    <label>CR SupervisorCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>