force-app/main/default/objects/VN_contact_manual__c/fields/cr_utmcampaign__c.field-meta.xml
<CustomField>
    <fullName>cr_utmcampaign__c</fullName>
    <label>CR UTMCampaign</label>
    <length>255</length>
    <type>Text</type>
</CustomField>