force-app/main/default/objects/VN_contact_manual__c/fields/cr_utmcontent__c.field-meta.xml
<CustomField>
    <fullName>cr_utmcontent__c</fullName>
    <label>CR UTMContent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>