force-app/main/default/objects/VN_contact_manual__c/fields/cr_utmmedium__c.field-meta.xml
<CustomField>
    <fullName>cr_utmmedium__c</fullName>
    <label>CR UTMMedium</label>
    <length>255</length>
    <type>Text</type>
</CustomField>