force-app/main/default/objects/VN_contact_manual__c/fields/cr_utmsource__c.field-meta.xml
<CustomField>
    <fullName>cr_utmsource__c</fullName>
    <label>CR UTMSource</label>
    <length>255</length>
    <type>Text</type>
</CustomField>