force-app/main/default/objects/VN_contact_manual__c/fields/cr_utmstring__c.field-meta.xml
<CustomField>
    <fullName>cr_utmstring__c</fullName>
    <label>CR UTMString</label>
    <length>255</length>
    <type>Text</type>
</CustomField>