force-app/main/default/objects/VN_contact_manual__c/fields/cr_utmterm__c.field-meta.xml
<CustomField>
    <fullName>cr_utmterm__c</fullName>
    <label>CR UTMTerm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>