force-app/main/default/objects/VN_contact_manual__c/fields/source_id__c.field-meta.xml
<CustomField>
    <fullName>source_id__c</fullName>
    <label>Source Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>