force-app/main/default/objects/VN_contact_manual__c/fields/sourcecreateddate__c.field-meta.xml
<CustomField>
    <fullName>sourcecreateddate__c</fullName>
    <label>Source Created Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>