force-app/main/default/objects/VN_contact_manual__c/validationRules/Valid_EmailOptOut.validationRule-meta.xml
<ValidationRule>
    <fullName>Valid_EmailOptOut</fullName>
    <active>true</active>
    <errorConditionFormula>NOT( OR( CONTAINS(&apos;true&apos;, LOWER(contact_emailoptout__c)  ), 
CONTAINS(&apos;false&apos;, LOWER(contact_emailoptout__c)  ),
ISBLANK(contact_emailoptout__c) 
) )</errorConditionFormula>
    <errorMessage>Only True,False or blank are allowed</errorMessage>
</ValidationRule>